# Face-Recognition-ArcFace-Android

./: README.md  build.gradle.kts  settings.gradle.kts
arcface/: build.gradle.kts
arcface-core/: build.gradle.kts
arcface-core/src/main/cpp/: AffineMatrix.h  CMakeLists.txt  FaceAlignment.h  FaceTemplate.h  LinearRegression.h  RotatedBox.h  core.cpp
arcface/src/main/: AndroidManifest.xml
docs/: index.html  navigation.html  package-list
docs/arcface/: index.html  navigation.html
docs/arcface-core/: index.html
docs/arcface-core/com.appliedrec.verid3.facerecognition.arcface.core/: index.html
docs/arcface-core/com.appliedrec.verid3.facerecognition.arcface.core/-face-alignment/: -face-alignment.html  align-face.html  index.html
docs/arcface-core/com.appliedrec.verid3.facerecognition.arcface.core/-face-recognition-arc-face-core/: -face-recognition-arc-face-core.html  compare-face-recognition-templates.html  default-threshold.html  index.html  version.html
docs/arcface-core/com.appliedrec.verid3.facerecognition.arcface.core/-face-template-arc-face/: -face-template-arc-face.html  equals.html  hash-code.html  index.html
docs/arcface-core/com.appliedrec.verid3.facerecognition.arcface.core/-face-template-serializer/: descriptor.html  deserialize.html  index.html  serialize.html
docs/arcface/com.appliedrec.verid3.facerecognition.arcface.cloud/: index.html
docs/scripts/: pages.json  sourceset_dependencies.js
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+30 files in other folders)
